--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Heading 1</h1>
+    <h2>heading 2</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem commodi optio id reprehenderit saepe accusamus, est perspiciatis laborum voluptatem iste aliquid iure sunt itaque ipsum neque nam ea magnam. Optio?</p>
 </body>
 </html>
