Build arrow link component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a class="link-arrow">Learn More</a>
     <h1>Heading 1</h1>
     <h2>heading 2</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem commodi optio id reprehenderit saepe accusamus, est perspiciatis laborum voluptatem iste aliquid iure sunt itaque ipsum neque nam ea magnam. Optio?</p>
