--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <a class="link-arrow">Learn More</a>
     <h1>Heading 1</h1>
     <h2>heading 2</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem commodi optio id reprehenderit saepe accusamus, est perspiciatis laborum voluptatem iste aliquid iure sunt itaque ipsum neque nam ea magnam. Optio?</p>
+    <span class="badge badge--primary">10% off</span>
+    <ul class="list list--tick">
+        <li class="list__item">Item 1</li>
+        <li class="list__item">Item 2</li>
+        <li class="list__item">Item 3</li>
+    </ul>
 </body>
 </html>
