--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
         <li class="list__item">Item 2</li>
         <li class="list__item">Item 3</li>
     </ul>
-</body>
+
+        <i class="icon-container">
+            <svg class="icon icon--primary">
+                <use xlink:href="images/sprite.svg#computer"></use>
+              </svg>
+        </i>
+   </body>
 </html>
