--- a/index.html
+++ b/index.html
@@ -22,10 +22,28 @@
         <li class="list__item">Item 3</li>
     </ul>
 
-        <i class="icon-container">
+    <i class="icon-container">
             <svg class="icon icon--primary">
                 <use xlink:href="images/sprite.svg#computer"></use>
               </svg>
-        </i>
+    </i>
+
+    <button class="btn btn--primary btn--block">
+        Buy Them
+    </button>
+
+    <button class="btn btn--secondary btn--block">
+        Buy Them
+    </button>
+
+    <button class="btn btn--accent">
+        Buy Them
+    </button>
+
+    <button class="btn btn--outline">
+        Buy Them
+    </button>
+
+    
    </body>
 </html>
