--- a/index.html
+++ b/index.html
@@ -28,22 +28,26 @@
               </svg>
     </i>
 
-    <button class="btn btn--primary btn--block">
+    <button class="btn btn--primary">
         Buy Them
     </button>
-
-    <button class="btn btn--secondary btn--block">
-        Buy Them
-    </button>
-
-    <button class="btn btn--accent">
-        Buy Them
-    </button>
-
-    <button class="btn btn--outline">
-        Buy Them
-    </button>
-
     
+    <input type="text" class="input" placeholder="Enter Domain Name">
+
+    <div class="input-group">
+        <input type="text" class="input" placeholder="Enter Domain Name..">
+        <button class="btn btn--accent">
+            Buy Them
+        </button>
+    </div>
+    
+    <div style="width:30%;padding: 4rem;">
+        <div class="card card--secondary">
+            <header class="card__header">Card Title</header>
+            <div class="card__body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi molestias non excepturi, delectus at odio commodi deleniti distinctio, eligendi error mollitia nobis necessitatibus iusto hic suscipit ut quos, ea accusamus.
+            </div>
+        </div>
+    </div>
    </body>
 </html>
