All individual components buils such as cards, callouts, media, navbar and pricing plan

--- a/index.html
+++ b/index.html
@@ -1,53 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
-</head>
-<body>
-    <a class="link-arrow">Learn More</a>
+  </head>
+  <body>
+    <!-- <a class="link-arrow">Learn More</a>
     <h1>Heading 1</h1>
     <h2>heading 2</h2>
     <span class="badge badge--primary">10% off</span>
     <ul class="list list--tick">
-        <li class="list__item">Item 1</li>
-        <li class="list__item">Item 2</li>
-        <li class="list__item">Item 3</li>
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
     </ul>
 
     <i class="icon-container">
-            <svg class="icon icon--primary">
-                <use xlink:href="images/sprite.svg#computer"></use>
-              </svg>
+      <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#computer"></use>
+      </svg>
     </i>
 
-    <button class="btn btn--primary">
-        Buy Them
-    </button>
-    
-    <input type="text" class="input" placeholder="Enter Domain Name">
+    <button class="btn btn--primary">Buy Them</button>
+
+    <input type="text" class="input" placeholder="Enter Domain Name" />
 
     <div class="input-group">
-        <input type="text" class="input" placeholder="Enter Domain Name..">
-        <button class="btn btn--accent">
-            Buy Them
-        </button>
-    </div>
-    
-    <div style="width:30%;padding: 4rem;">
-        <div class="card card--secondary">
-            <header class="card__header">Card Title</header>
-            <div class="card__body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi molestias non excepturi, delectus at odio commodi deleniti distinctio, eligendi error mollitia nobis necessitatibus iusto hic suscipit ut quos, ea accusamus.
-            </div>
-        </div>
-    </div>
-   </body>
+      <input type="text" class="input" placeholder="Enter Domain Name.." />
+      <button class="btn btn--accent">Buy Them</button>
+    </div> -->
+
+    <!-- <nav class="nav collapsible">
+      <a class="nav_brand" href="/"><img src="images/logo.svg" alt=""></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+          <li class="nav__item"><a href="">Hosting</a></li>
+          <li class="nav__item"><a href="">VPS</a></li>
+          <li class="nav__item"><a href="">Domain</a></li>
+          <li class="nav__item"><a href="">Pricing</a></li>
+      </ul>
+    </nav>
+    <script src="js/main.js"></script> -->
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+          <p class="hero__tagline">Deploy your websites in less than 2 minutes </p>
+          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+        </header>
+        <img class="hero__image" src="images/banner.png">
+      </div>
+    </section>
+  </body>
 </html>
