--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <button class="btn btn--accent">Buy Them</button>
     </div> -->
 
-    <header>
+    <header >
       <nav class="nav collapsible">
         <a class="nav_brand" href="/"><img class="logo-ifan" src="images/logo-ifan.png" alt=""></a>
         <svg class="icon icon--white nav__toggler">
@@ -77,7 +77,7 @@
             srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
           <source
             type="image/png"
-            srcset="images/banner.webp 1x, images/banner@2x" />
+            srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
           <img class="hero__image" src="images/banner.png"
         /></picture>
       </div>
@@ -101,12 +101,12 @@
         </button>
       </div>
       <ul class="list block-domain__prices">
-        <li><span class="badge badge--secondary">.com $9</span></li>
-        <li>.sg #10</li>
-        <li>.space $11</li>
-        <li>.info $14</li>
-        <li>.net $10</li>
-        <li>.xyz $10</li>
+        <li><span class="badge badge--secondary">.com</span></li>
+        <li>.ai</li>
+        <li>.co.in</li>
+        <li>.in</li>
+        <li>.dev</li>
+        <li>.info</li>
       </ul>
     </section>
 
@@ -116,16 +116,16 @@
           <div class="card card--secondary">
             <header class="card__header">
               <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <span class="plan__price">&#8377;50</span>
               <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badgesmall">10% off</span>
+              <span class="badge badge--secondary badgesmall">40% off</span>
               <span class="plan__description">East start on the cloud</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
                 <li class="list__item">Unlimited bandwidth</li>
-                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">50 GB SSD Storage</li>
                 <li class="list__item">3 GB RAM</li>
               </ul>
               <button class="btn btn--outline btn--block">Buy Now</button>
@@ -137,17 +137,17 @@
           <div class="card card--primary">
             <header class="card__header">
               <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <span class="plan__price">&#8377;150</span>
               <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--primary badgesmall">10% off</span>
-              <span class="plan__description">East start on the cloud</span>
+              <span class="badge badge--primary badgesmall">50% off</span>
+              <span class="plan__description">Personal tools provided</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
                 <li class="list__item">Unlimited bandwidth</li>
                 <li class="list__item">100 GB SSD Storage</li>
-                <li class="list__item">3 GB RAM</li>
+                <li class="list__item">10 GB RAM</li>
               </ul>
               <button class="btn btn--outline btn--block">Buy Now</button>
             </div>
@@ -158,17 +158,17 @@
           <div class="card card--secondary">
             <header class="card__header">
               <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
+              <span class="plan__price">&#8377;500</span>
               <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badgesmall">10% off</span>
-              <span class="plan__description">East start on the cloud</span>
+              <span class="badge badge--secondary badgesmall">70% off</span>
+              <span class="plan__description">Assistant assigned</span>
             </header>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
                 <li class="list__item">Unlimited bandwidth</li>
-                <li class="list__item">100 GB SSD Storage</li>
-                <li class="list__item">3 GB RAM</li>
+                <li class="list__item">1TB SSD Storage</li>
+                <li class="list__item">32 GB RAM</li>
               </ul>
               <button class="btn btn--outline btn--block">Buy Now</button>
             </div>
@@ -354,7 +354,7 @@
     <section class="block">
         <header class="block__header">
           <h2>What our customers are saying !!</h2>
-          <p>Not all customer reviewes are postive, some are negative but most are positive.</p>
+          <p>Not all customer reviewes are postive, some are negative but most of our users gave positive reviews.</p>
         </header>
         <div class="container">
           <div class="card testimonial">
